# NDKarte

./: .gitignore  CHANGELOG.md  README.md  gradle.properties  gradlew  settings.gradle.kts
.github/: copilot-instructions.md  project-specification.md
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: map_catalog.json  region_boundaries.json  world_landmass.json
app/src/main/assets/styles/: offline.json
app/src/main/cpp/: CMakeLists.txt  main.c
app/src/main/java/com/ndkarte/app/: GpxData.kt  InteractiveMapView.kt  LocationProvider.kt  MainActivity.kt  MapDownloadActivity.kt  MapDownloadManager.kt  MapManager.kt  NavigationManager.kt  RouteEditor.kt  RouteNavigator.kt  RustBridge.kt  SyncManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_map_download.xml  item_download_header.xml  item_download_region.xml
app/src/main/res/values/: strings.xml
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  USERS_GUIDE.md
rust-core/: Cargo.toml
rust-core/src/: android_jni.rs  convert.rs  gpx.rs  lib.rs  nav.rs  route_nav.rs
tools/: reinstall.sh  update-instructions.sh  update.sh
